# InputManager

./: Cargo.toml
src/: lib.rs  listener.rs  sender.rs  util.rs
src/structs/: keyboard.rs  mouse.rs
